--- a/geostats/src/main/AndroidManifest.xml
+++ b/geostats/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity
             android:name=".Main"
+            android:theme="@style/Main"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="com.geo.geostats.MAIN"/>
