--- a/geostats/src/main/AndroidManifest.xml
+++ b/geostats/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity
             android:name=".Main"
-            android:theme="@style/Main"
+            android:theme="@style/Theme.PageIndicatorDefaults"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="com.geo.geostats.MAIN"/>
@@ -54,6 +54,7 @@
         </activity>
         <activity android:name=".Indicators"
             android:label="@string/app_name"
+            android:theme="@style/Theme.PageIndicatorDefaults"
             android:parentActivityName="com.geo.geostats.Main">
             <intent-filter>
                 <action android:name="com.geo.geostats.INDICATORS"/>
@@ -65,6 +66,7 @@
         </activity>
         <activity android:name=".Branches"
             android:label="@string/app_name"
+            android:theme="@style/Theme.PageIndicatorDefaults"
             android:parentActivityName="com.geo.geostats.Main">
             <intent-filter>
                 <action android:name="com.geo.geostats.BRANCHES"/>
@@ -76,6 +78,7 @@
         </activity>
         <activity android:name=".BranchesFragmentManager"
             android:label="@string/app_name"
+            android:theme="@style/Theme.PageIndicatorDefaults"
             android:parentActivityName="com.geo.geostats.Branches">
             <intent-filter>
                 <action android:name="com.geo.geostats.BRANCHES_FM"/>
