--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile 'com.android.support:support-v4:19.0.1'
     compile 'com.android.support:appcompat-v7:19.0.1'
     compile project(':viewpagerindicator')
+    compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
