--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.0.1'
     compile project(':viewpagerindicator')
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    compile files('libs/universalimageloader.jar')
 }
