--- a/geostats/src/main/AndroidManifest.xml
+++ b/geostats/src/main/AndroidManifest.xml
@@ -7,11 +7,23 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat"
         android:icon="@drawable/ic_launcher">
+        <meta-data android:name="capptain:appId" android:value="geo000001"/>
+        <service android:name="com.ubikod.capptain.android.service.CapptainService" android:label="GeostatsService" android:process=":Capptain">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.ubikod.capptain.ICapptainService" />
+                <data android:scheme="capptain" />
+            </intent-filter>
+            <meta-data android:name="capptain:api:level" android:value="22" />
+            <meta-data android:name="capptain:api:id" android:value="b6a5b1113175bf391e442a8653876b84" />
+            <meta-data android:name="capptain:log:test" android:value="true" />
+        </service>
         <activity
             android:name="com.geo.geostats.Intro"
             android:theme="@style/FullScreen"
