--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -1,8 +1,8 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 'android-L'
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
         minSdkVersion 8
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:19.1.0'
-    compile 'com.android.support:appcompat-v7:19.1.0'
+    compile 'com.android.support:support-v4:21.0.0-rc1'
+    compile 'com.android.support:appcompat-v7:21.0.0-rc1'
     compile project(':viewpagerindicator')
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
