--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'android-L'
+    compileSdkVersion 19
     buildToolsVersion '20.0.0'
 
     defaultConfig {
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.0-rc1'
-    compile 'com.android.support:appcompat-v7:21.0.0-rc1'
+    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.android.support:appcompat-v7:20.0.0'
     compile project(':viewpagerindicator')
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 }
