--- a/viewpagerindicator/build.gradle
+++ b/viewpagerindicator/build.gradle
@@ -13,11 +13,11 @@ repositories {
 }
 
 android {
-    compileSdkVersion 'android-L'
+    compileSdkVersion 19
     buildToolsVersion '20.0.0'
     defaultConfig {
         minSdkVersion 7
-        targetSdkVersion 20
+        targetSdkVersion 19
         versionCode 1
         versionName '1.0'
     }
@@ -32,5 +32,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:21.0.0-rc1'
+    compile 'com.android.support:appcompat-v7:20.0.0'
 }
