--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -7,12 +7,12 @@ android {
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 19
-        versionCode 1
-        versionName '1.0'
+        versionCode 5
+        versionName '1.3'
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
