--- a/viewpagerindicator/build.gradle
+++ b/viewpagerindicator/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-		classpath 'com.android.tools.build:gradle:0.13.1'
+		classpath 'com.android.tools.build:gradle:0.14.+'
     }
 }
 apply plugin: 'com.android.library'
@@ -23,7 +23,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
