--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     repositories {
         mavenCentral()
         mavenLocal()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
 
@@ -14,5 +15,6 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        google()
     }
 }
