--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '23.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 19
+        minSdkVersion 14
+        targetSdkVersion 27
         versionCode 5
         versionName '1.3'
     }
@@ -24,8 +24,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:20.0.0'
-    compile 'com.android.support:appcompat-v7:20.0.0'
-    compile project(':viewpagerindicator')
-    compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    compile 'com.viewpagerindicator:library:2.4.1'
+    compile 'com.android.support:support-v4:27.1.1'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    implementation project(':viewpagerindicator')
 }
