--- a/viewpagerindicator/build.gradle
+++ b/viewpagerindicator/build.gradle
@@ -33,5 +33,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
 }
