--- a/viewpagerindicator/build.gradle
+++ b/viewpagerindicator/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        jcenter()
     }
     dependencies {
 		classpath 'com.android.tools.build:gradle:3.1.2'
