--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
     //    implementation project(':viewpagerindicator')
     api 'com.inkapplications.viewpageindicator:library:2.4.3'
+    api 'com.google.firebase:firebase-core:16.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
