--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@
 buildscript {
     repositories {
         jcenter()
-        mavenCentral()
         mavenLocal()
         google()
     }
@@ -18,5 +17,6 @@ allprojects {
         mavenCentral()
         mavenLocal()
         google()
+        jcenter()
     }
 }
