--- a/viewpagerindicator/build.gradle
+++ b/viewpagerindicator/build.gradle
@@ -1,8 +1,7 @@
 buildscript {
     repositories {
-        mavenCentral()
-        google()
         jcenter()
+        google()
     }
     dependencies {
 		classpath 'com.android.tools.build:gradle:3.1.2'
@@ -20,8 +19,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 1
-        versionName '1.0'
+        versionCode 5
+        versionName '1.3'
     }
     buildTypes {
         release {
@@ -34,5 +33,5 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    api 'com.android.support:appcompat-v7:27.1.1'
 }
