--- a/geostats/build.gradle
+++ b/geostats/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdkVersion 28
+        targetSdkVersion 28
         versionCode 5
         versionName '1.3'
     }
@@ -24,11 +23,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+//    implementation 'com.android.support:support-v4:28.0.0'
+//    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-    api 'com.google.firebase:firebase-core:16.0.0'
-    api project(path: ':viewpagerindicator', configuration: 'default')
+    implementation 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
+    api 'com.google.firebase:firebase-core:17.2.0'
+//    api project(path: ':viewpagerindicator', configuration: 'default')
 }
 
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
