--- a/viewpagerindicator/src/main/AndroidManifest.xml
+++ b/viewpagerindicator/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.geo.viewpagerindicator">
     <uses-sdk
-        android:maxSdkVersion="17"
-        android:minSdkVersion="8" />
+        android:maxSdkVersion="17" />
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
