--- a/geostats/src/main/AndroidManifest.xml
+++ b/geostats/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <uses-feature android:name="android.hardware.faketouch"/>
+    <uses-feature android:required="false" android:name="android.hardware.touchscreen"/>
+
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat"
