--- a/geostats/src/main/AndroidManifest.xml
+++ b/geostats/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name="com.geo.geostats.Intro"
             android:theme="@style/FullScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +26,8 @@
         <activity
             android:name=".Main"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.MAIN"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -34,7 +36,8 @@
         <activity android:name=".Continents"
             android:theme="@style/Theme.PageIndicatorDefaults"
             android:label="@string/app_name"
-            android:parentActivityName="com.geo.geostats.Main">
+            android:parentActivityName="com.geo.geostats.Main"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.CONTINENTS"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -46,7 +49,8 @@
         <activity android:name=".Oceans"
             android:theme="@style/Theme.PageIndicatorDefaults"
             android:label="@string/app_name"
-            android:parentActivityName="com.geo.geostats.Main">
+            android:parentActivityName="com.geo.geostats.Main"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.OCEANS"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -58,7 +62,8 @@
         <activity android:name=".Indicators"
             android:label="@string/app_name"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:parentActivityName="com.geo.geostats.Main">
+            android:parentActivityName="com.geo.geostats.Main"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.INDICATORS"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -70,7 +75,8 @@
         <activity android:name=".Topics"
             android:label="@string/app_name"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:parentActivityName="com.geo.geostats.Main">
+            android:parentActivityName="com.geo.geostats.Main"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.TOPICS"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -82,7 +88,8 @@
         <activity android:name=".TopicsFragmentManager"
             android:label="@string/app_name"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:parentActivityName=".Topics">
+            android:parentActivityName=".Topics"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.TOPICS_FM"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -94,7 +101,8 @@
         <activity android:name=".About"
             android:theme="@style/DialogContinents"
             android:label="@string/app_name"
-            android:parentActivityName="com.geo.geostats.Main">
+            android:parentActivityName="com.geo.geostats.Main"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.ABOUT"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -106,7 +114,8 @@
         <activity android:name=".InfoReferences"
             android:theme="@style/Theme.PageIndicatorDefaults"
             android:label="@string/app_name"
-            android:parentActivityName="com.geo.geostats.Main">
+            android:parentActivityName="com.geo.geostats.Main"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.INFO_REFERENCES"/>
                 <category android:name="android.intent.category.DEFAULT"/>
