--- a/build.gradle
+++ b/build.gradle
@@ -2,19 +2,19 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         mavenLocal()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.google.gms:google-services:4.3.14'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         mavenLocal()
         google()
     }
