--- a/geostats/src/main/AndroidManifest.xml
+++ b/geostats/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.geo.geostats">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +14,6 @@
         <activity
             android:name="com.geo.geostats.Intro"
             android:theme="@style/FullScreen"
-            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +24,6 @@
         <activity
             android:name=".Main"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.geo.geostats.MAIN"/>
@@ -35,7 +32,6 @@
         </activity>
         <activity android:name=".Continents"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:label="@string/app_name"
             android:parentActivityName="com.geo.geostats.Main"
             android:exported="true">
             <intent-filter>
@@ -48,7 +44,6 @@
         </activity>
         <activity android:name=".Oceans"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:label="@string/app_name"
             android:parentActivityName="com.geo.geostats.Main"
             android:exported="true">
             <intent-filter>
@@ -60,7 +55,6 @@
                 android:value="com.geo.geostats.Main" />
         </activity>
         <activity android:name=".Indicators"
-            android:label="@string/app_name"
             android:theme="@style/Theme.PageIndicatorDefaults"
             android:parentActivityName="com.geo.geostats.Main"
             android:exported="true">
@@ -73,7 +67,6 @@
                 android:value="com.geo.geostats.Main" />
         </activity>
         <activity android:name=".Topics"
-            android:label="@string/app_name"
             android:theme="@style/Theme.PageIndicatorDefaults"
             android:parentActivityName="com.geo.geostats.Main"
             android:exported="true">
@@ -86,7 +79,6 @@
                 android:value="com.geo.geostats.Main" />
         </activity>
         <activity android:name=".TopicsFragmentManager"
-            android:label="@string/app_name"
             android:theme="@style/Theme.PageIndicatorDefaults"
             android:parentActivityName=".Topics"
             android:exported="true">
@@ -100,7 +92,6 @@
         </activity>
         <activity android:name=".About"
             android:theme="@style/DialogContinents"
-            android:label="@string/app_name"
             android:parentActivityName="com.geo.geostats.Main"
             android:exported="true">
             <intent-filter>
@@ -113,7 +104,6 @@
         </activity>
         <activity android:name=".InfoReferences"
             android:theme="@style/Theme.PageIndicatorDefaults"
-            android:label="@string/app_name"
             android:parentActivityName="com.geo.geostats.Main"
             android:exported="true">
             <intent-filter>
