gradle versio upgrade

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,7 @@
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=9999
 android.useAndroidX=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 #android.enableJetifier = true
